--- a/2024/MediaRepresentationVI/mr6_01.md
+++ b/2024/MediaRepresentationVI/mr6_01.md
@@ -28,21 +28,20 @@
   - [AI(Artificial Intelligence・人工知能)とは](#aiartificial-intelligence人工知能とは)
   - [AI 歴史](#ai-歴史)
   - [第三次人工知能ブームでの主な出来事](#第三次人工知能ブームでの主な出来事)
-  - [ChatGPT](#chatgpt)
+  - [ChatGPT以降](#chatgpt以降)
   - [LLM](#llm)
   - [Bing AI](#bing-ai)
-  - [Bing AIの使い方](#bing-aiの使い方)
+  - [Copilot(旧Bing AI)の使い方](#copilot旧bing-aiの使い方)
   - [Edgeのインストール](#edgeのインストール)
-  - [EdgeでのBingの使い方 -- チャット](#edgeでのbingの使い方----チャット)
+  - [EdgeでのCopilotの使い方 -- チャット](#edgeでのcopilotの使い方----チャット)
   - [EdgeでのBingの使い方 -- 作成](#edgeでのbingの使い方----作成)
-  - [他にも調べ物だと](#他にも調べ物だと)
+  - [他にも...](#他にも)
   - [画像生成について](#画像生成について)
-  - [画像生成AIについて](#画像生成aiについて)
   - [Web版Stable Diffusion](#web版stable-diffusion)
   - [プロンプトエンジニアリング](#プロンプトエンジニアリング)
   - [やってみよう](#やってみよう)
-  - [おまけ1](#おまけ1)
-  - [おまけ2](#おまけ2)
+  - [AIはどこまで行くの？](#aiはどこまで行くの)
+  - [小レポート](#小レポート)
 
 ---
 
@@ -235,6 +234,7 @@ AIとはこれからうまく付き合っていくしかないと思います。
 
 ですので、このタイミングで少しまとめておきましょう。
 
+
 ---
 ## AIのネタについて
 ニュースサイトなどやX(Twitter)でも仕入れていますが、
@@ -247,7 +247,178 @@ AIとはこれからうまく付き合っていくしかないと思います。
 情報にはアンテナを立てておきましょう。
 
 ## まとめてくれてる人もいます
-- [【おすすめAIツール一覧】2024年８月最新！ジャンル別60選](https://ai-workstyle.com/ai-summarize/)
+- [【おすすめAIツール一覧】2024年９月最新！ジャンル別60選](https://ai-workstyle.com/ai-summarize/)
+
+## AI(Artificial Intelligence・人工知能)とは
+しっかりした定義は実はなくて、
+> 人が実現するさまざまな知覚や知性を人工的に再現するもの
+
+くらいに捉えている人が多いと思います。
+
+これ、深く考えると非常に難しくて、哲学にもなってきます。
+
+> 知能って何？
+
+みたいなことを考えていかなければならないからです。
+
+## AI 歴史
+- [ＡＩ盛衰６０年の歴史をパパっと解説！３度目のブームでどうなる未来！](https://www.youtube.com/watch?v=grKn4r4mW8c){:target="_blank"}
+
+- 第一次人工知能ブーム：1950年代。単純な問題は解けたが複雑な現実社会の課題は解けなかった
+- AI冬の時代：1970年代
+- 第二次人工知能ブーム：1980年代。専門家のように知識をルールをと教え込んだ。膨大な一般常識を扱えなかったり、例外に対応できなかった。
+- AI冬の時代：1990年代
+- 第三次人工知能ブーム：2010年代。ビッグデータを機械学習できるようにな理、複雑な問題に対応できるようになっている。
+
+[参考：AI・人工知能の歴史について年表を活用しながら時系列で簡単に紹介](https://aismiley.co.jp/ai_news/detailed-explanation-of-the-history-of-ai-and-artificial-intelligence/){:target="_blank"}
+
+## 第三次人工知能ブームでの主な出来事
+- 2006年:ディープラーニングの実用方法が登場
+- 2011年:IBMワトソンがクイズ番組で人間に勝利する
+- 2012年:画像認識の向上で画像データから「猫」を特定できるようになる
+- 2015年:イーロン・マスクらが1000億円以上をオープンAIに寄付
+- 2016年:「アルファ碁」（コンピュータ囲碁プログラム）がプロに初勝利
+
+## ChatGPT以降
+何がすごいって、会話のように質問に対して返事を返してくれるところです。
+
+バージョンによって性能が変わります(有料だったり...)
+
+GPT4o,4o miniだと無料で利用可能です。
+- [ChatGPT](https://chat.openai.com/){:target="_blank"}
+
+## LLM
+膨大な量のテキストデータを使ってトレーニングされた自然言語処理モデルのこと
+- LLM: Large Language Model
+
+GPT-4以外にもたくさん紹介されています。モデルによって得意不得意が異なります。
+- [大規模言語モデル（LLM）とは？仕組み・種類・活用サービス・課題をわかりやすく解説](https://aismiley.co.jp/ai_news/what-is-large-language-models/)
+
+## Bing AI
+BingではGPT4のモデルを利用していますが、ChatGPTとは多少異なります。
+
+> ChatGPTでは回答の回数に制限はありませんが、BingAIは一つのトピックに対して20回までしか回答できない
+
+## Copilot(旧Bing AI)の使い方
+Microsoftアカウントでのログインが必須となります。
+
+- スマホアプリ
+- Edge
+
+以下のブラウザでも利用できるとありますが、まだ不具合があるような...
+- Chrome (Bing AI for Chromeを追加)
+- Safari
+
+> 最高級のBing Chat体験をお楽しみ頂くためには、Microsoft EdgeブラウザでのBingのご利用を引き続きお勧めします
+
+としているので、Edgeを使うのが無難です。
+
+
+## Edgeのインストール
+- Edgeをダウンロードしましょう
+- インストーラをダブルクリック
+- 起動
+- Microsoftのアカウントでログインしましょう。
+
+## EdgeでのCopilotの使い方 -- チャット
+- 右上のCopilotのアイコンをクリックする
+- 会話のスタイルを選択してから質問する。
+
+検索も可能なため、「今日の天気は？」でも回答してくれます。
+
+## EdgeでのBingの使い方 -- 作成
+- 段落
+- メール
+- ブログの投稿
+- アイディア
+
+と形式を指定してコンテンツを作成することも可能です。
+
+## 他にも...
+- [Claude](https://claude.ai/)
+- [Perplexity](https://www.perplexity.ai/)
+- [Genspark](https://www.genspark.ai/)
+
+も評判いいですね。
+
+AIサービスにも向き不向きがあるようですので、色々試してみましょう。
+- [無料AI検索エンジン『Genspark』とは？Perplexityとの違いや使い方を徹底解説 ](https://rozetta-square.jp/knowledge/8705/)
+
+---
+---
+## 画像生成について
+画像生成のサービスは非常にたくさんリリースされています。
+EdgeのCopilotのチャットから画像生成も「DALL-E」を利用してできますね。(Bing Image Creatorを利用している)
+Bing Image Creatorを使うと「DALL-E」という方式で生成してくれるそうですが、まだMacではできないみたいですね。
+
+今日は、それらで画像生成試してみましょう。
+
+英語苦手な人は
+- [DeepL](https://www.deepl.com/ja/translator){:target="_blank"}
+
+で翻訳をうまく使いましょう。
+
+## Web版Stable Diffusion
+去年は、日本語に対応した
+- [Memeplex](https://memeplex.app/){:target="_blank"}
+
+を試したんですが、アクセス集中するとうまくいきませんでした。
+
+- Copilot
+- [Mage.space](https://www.mage.space/){:target="_blank"}
+- [DreamStudio](https://beta.dreamstudio.ai/generate){:target="_blank"}
+- [Stable Diffusion Online](https://stablediffusionweb.com/){:target="_blank"}
+
+無料で利用できるクレジットに限りがある場合が多いようです。
+
+なお、Memeplexの開発者のコメントは[こちら](https://note.com/shi3zblog/n/n8a3c75574053){:target="_blank"}
+
+## プロンプトエンジニアリング
+自動で画像を生成してくれるとはいえ、要求をうまく伝えないと思ったような画像は生成してくれません。
+
+> プロンプトエンジニアリング：
+> AI（人工知能）から望ましい出力を得るために、指示や命令を設計、最適化するスキルのこと
+
+が必要なことを知っておきましょう。
+
+指示の仕方により結果が変わってきます。
+
+## やってみよう
+manabaから
+- 生成された画像(添付)
+- プロンプト(コメント)
+
+を提出しましょう。
+
+## AIはどこまで行くの？
+AIが今後の社会生活において、大きなインパクトを与えることは確実ではあるものの、まだまだ動向は未知といえます。
+
+興味深い記事が出ています。
+- [企業の生成AIのプロジェクトは、2026年までに30％が放棄されるだろう](https://www.campaignjapan.com/article/%E4%BC%81%E6%A5%AD%E3%81%AE%E7%94%9F%E6%88%90ai%E3%81%AE%E3%83%97%E3%83%AD%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AF-2026%E5%B9%B4%E3%81%BE%E3%81%A7%E3%81%AB30%EF%BC%85%E3%81%8C%E6%94%BE%E6%A3%84%E3%81%95%E3%82%8C%E3%82%8B%E3%81%A0%E3%82%8D%E3%81%86/497657)
+
+
+## 小レポート
+manabaから
+
+> AIをどのように利用しているか・どのように利用していくか、の観点から簡単にまとめよ。
+
+
+<!--
+2023の内容
+
+---
+## AIのネタについて
+ニュースサイトなどやX(Twitter)でも仕入れていますが、
+
+- [YouTube AI大学](https://www.youtube.com/@AIAIChatGPT-cj4sh)
+
+がよくまとめてくれてます。
+何ができるということを知っているか、がこれから非常に大事になると思います。
+
+情報にはアンテナを立てておきましょう。
+
+## まとめてくれてる人もいます
+- [【おすすめAIツール一覧】2024年９月最新！ジャンル別60選](https://ai-workstyle.com/ai-summarize/)
 
 ## AI(Artificial Intelligence・人工知能)とは
 しっかりした定義は実はなくて、
@@ -322,7 +493,7 @@ Microsoftアカウントでのログインが必須となります。
 - Microsoftのアカウントでログインしましょう。
 
 ## EdgeでのBingの使い方 -- チャット
-- 右上の「b」のアイコンをクリックする
+- 右上のCopilotのアイコンをクリックする
 - 会話のスタイルを選択してから質問する。
 
 検索も可能なため、「今日の天気は？」でも回答してくれます。
@@ -337,11 +508,12 @@ Microsoftアカウントでのログインが必須となります。
 
 ## 他にも調べ物だと
 - [Perplexity](https://www.perplexity.ai/)
+- [Genspark](https://www.genspark.ai/)
 
 も評判いいですね。
 
 AIサービスにも向き不向きがあるようですので、色々試してみましょう。
-
+- [無料AI検索エンジン『Genspark』とは？Perplexityとの違いや使い方を徹底解説 ](https://rozetta-square.jp/knowledge/8705/)
 
 ---
 ---
@@ -412,6 +584,7 @@ AIはクリエイティブ作業にもかなり大きなインパクトを与え
 - [プラグインはこちらから](https://goyo.app/){:target="_blank"}
 
 
+-->
 
 
 
