--- a/2024/MediaRepresentationVI/mr6_01.md
+++ b/2024/MediaRepresentationVI/mr6_01.md
@@ -41,6 +41,7 @@
   - [Web版Stable Diffusion](#web版stable-diffusion)
   - [プロンプトエンジニアリング](#プロンプトエンジニアリング)
   - [やってみよう](#やってみよう)
+  - [Chrome拡張](#chrome拡張)
   - [AIはどこまで行くの？](#aiはどこまで行くの)
   - [小レポート](#小レポート)
 
@@ -415,6 +416,15 @@ manabaから
 - プロンプト(コメント)
 
 を提出しましょう。
+
+## Chrome拡張
+Chromeでは拡張機能を入れることによって機能を追加することができます。
+
+- [MaxAI.me](https://chromewebstore.google.com/detail/maxaime%EF%BC%9Agpt-4o%E3%80%81claude-3%E3%80%81g/mhnlakgilnojmhinhkckjpncpbhabphi?hl=ja)
+
+というのを今自分は試しています。(どのくらいサービス続けるかわかりませんが...)
+
+他にもあるかもしれません。色々調べてみましょう。
 
 ## AIはどこまで行くの？
 AIが今後の社会生活において、大きなインパクトを与えることは確実ではあるものの、まだまだ動向は未知といえます。
