--- a/2024/MediaRepresentationVI/mr6_01.md
+++ b/2024/MediaRepresentationVI/mr6_01.md
@@ -36,6 +36,7 @@
   - [Edgeのインストール](#edgeのインストール)
   - [EdgeでのCopilotの使い方 -- チャット](#edgeでのcopilotの使い方----チャット)
   - [EdgeでのBingの使い方 -- 作成](#edgeでのbingの使い方----作成)
+  - [ブラウザについて](#ブラウザについて)
   - [他にも...](#他にも)
   - [画像生成について](#画像生成について)
   - [Web版Stable Diffusion](#web版stable-diffusion)
@@ -357,6 +358,18 @@ Microsoftアカウントでのログインが必須となります。
 - アイディア
 
 と形式を指定してコンテンツを作成することも可能です。
+
+## ブラウザについて
+ブラウザにはレンダリングエンジン・JavaScriptエンジンという言葉があります。
+- [ブラウザレンダリングの仕組みを理解し、Webサイトのパフォーマンス向上を目指す](https://noveltyinc.jp/media/browser-rendering)
+
+現在、最も利用されているブラウザはChromeですので
+- [【2024年7月版】世界・日本におけるブラウザシェア率ランキング｜Safariのシェア率が減少傾向](https://www.qbook.jp/column/1630.html)
+
+Chromeと同じのレンダリングエンジン・JavaScriptエンジンを利用しているものを利用するのが無難です。
+
+というわけでEdgeを紹介してみました。
+
 
 ## 他にも...
 - [Claude](https://claude.ai/)
