--- a/2024/MediaRepresentationVI/mr6_01.md
+++ b/2024/MediaRepresentationVI/mr6_01.md
@@ -44,7 +44,7 @@
   - [やってみよう](#やってみよう)
   - [Chrome拡張](#chrome拡張)
   - [AIはどこまで行くの？](#aiはどこまで行くの)
-  - [小レポート](#小レポート)
+  - [小レポート(時間切れで未実施)](#小レポート時間切れで未実施)
 
 ---
 
@@ -446,7 +446,7 @@ AIが今後の社会生活において、大きなインパクトを与えるこ
 - [企業の生成AIのプロジェクトは、2026年までに30％が放棄されるだろう](https://www.campaignjapan.com/article/%E4%BC%81%E6%A5%AD%E3%81%AE%E7%94%9F%E6%88%90ai%E3%81%AE%E3%83%97%E3%83%AD%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E3%81%AF-2026%E5%B9%B4%E3%81%BE%E3%81%A7%E3%81%AB30%EF%BC%85%E3%81%8C%E6%94%BE%E6%A3%84%E3%81%95%E3%82%8C%E3%82%8B%E3%81%A0%E3%82%8D%E3%81%86/497657)
 
 
-## 小レポート
+## 小レポート(時間切れで未実施)
 manabaから
 
 > AIをどのように利用しているか・どのように利用していくか、の観点から簡単にまとめよ。
