--- a/2024/MediaRepresentationVI/mr6_02.md
+++ b/2024/MediaRepresentationVI/mr6_02.md
@@ -161,7 +161,9 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 これに限らずMacではユーティリティと呼ばれるアプリを導入すると(無料のものも結構ある)より便利に使えることを知っておきましょう。
 
-自分が手放せない有料のユーティリティは[DefaultFolderX](https://tamoc.com/default-folder-x/)です。
+自分が手放せない有料のユーティリティは[DefaultFolderX](https://tamoc.com/default-folder-x/)でした...知らない方法があったので、もう平気かなぁ。
+
+開くや保存する、のファイルダイアログにFinderのフォルダをドラッグアンドドロップすると、そこに簡単に移ることができます。時短です！
 
 
 ---
@@ -183,7 +185,12 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 と併用している現状です。
 
-また、Rustと呼ばれる言語で開発された[**Lapce**](https://lapce.dev/){:target="_blank"} がVSC一強の中で少し注目されています。
+
+また、Rustと呼ばれる実行速度の速い言語で開発された[Zed](https://github.com/zed-industries/zed),[**Lapce**](https://lapce.dev/){:target="_blank"}, がVSC一強の中で注目されています。
+
+AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.cursor.com/)だったり、VSCに[Aider](https://marketplace.visualstudio.com/items?itemName=MattFlower.aider)も一部注目されていますが、確定事項ではありません。
+
+- [参考：VSCode + Aider + Supermaven : STOP PAYING for CURSOR with this 100% FREE & Opensource Alternative](https://www.youtube.com/watch?v=XkDSQq0fwfU)
 
 ---
 ---
@@ -214,9 +221,10 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 体験してみましょう。
 
-1. Option+Shift(win: Alt+Shift)で、行頭をドラッグしてみましょう。
-2. カーソルの数が増えましたね。
-3. 文字を入力すると、カーソルの位置全部に入力ができますね。
+1. 何行か適当に入力しましょう。
+2. Option+Shift(win: Alt+Shift)で、行頭をドラッグして複数行を選択してみましょう。
+3. カーソルの数が増えましたね。
+4. 文字を入力すると、カーソルの位置全部に入力ができますね。
 
 ---
 ### 検索と置換
@@ -246,7 +254,7 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 HTML,CSSを入力するの、コード補完があっても大変ではなかったですか？(情報デザイン取ってない人は知らないか...)
 
-最低限のHTMLを入力するのは「!」だけで良い、と情報デザイン応用演習Iに教えた気がしますが、これも実はEmmetの機能でした。
+最低限のHTMLを入力するのは「!」だけで良い、と情報デザイン演習Iで教えた気がします(?)が、これも実はEmmetの機能でした。
 
 1. 適当なhtmlファイルを作成(test.htmlなど)
 2. 「!」を打ってリターン
@@ -268,12 +276,16 @@ HTML,CSSを入力するの、コード補完があっても大変ではなかっ
 
 ### 1. 必要な情報を言語化できてる？
 例えば沖縄県の名護市内に旅行に来ていたとして、できれば東京にもあるようなフランチャイズ店ではなく、地元の人が経営しており地元民が通うようなお店で食事がしたいと考えます。 どう検索しますか？
+<!-- 名護 個人経営 レストラン -->
 
 ### 2. 他の言い方はない？
 検索技術を向上させたいとき、「検索技術」だと、うまく引っかかりません。どう検索しましょうか？
+<!-- 検索 方法 コツ-->
 
 ### 3. 検索結果からうまく次なる検索ワードを拾えてる？
 ワードプレスに問い合わせフォームを作りたい時のやり方をどうやって調べますか？
+<!-- wp 問い合わせフォーム-->
+<!-- Contact Form7 使い方-->
 
 ### 4. 次の方法試したことありますか？
 1. 検索用語に「とは」を付加
@@ -309,6 +321,8 @@ HTML,CSSを入力するの、コード補完があっても大変ではなかっ
 
 https://kisopro.net/blog/programming/google-it/
 
+
+AIの時代になって、多少やり方は変わっていくかもしれませんが、基本的な検索力はあっていいと思います。
 
 ---
 ---
@@ -353,9 +367,9 @@ Adobeはこれまでも多くの製品を買収してきました。
 ## 小レポート
 - [寿司打](https://sushida.net/){:target="_blank"}
 の
-> **普通・高級コース10000円コース**
+> **普通/高級コース10000円コース**
 
-での1分間平均の数値を提出せよ。
+での1秒あたりの平均キータイプ数を提出せよ。
 
 (先に言ったようにIT企業だと5.6以上求められるケースがあります。)
 
