--- a/2024/MediaRepresentationVI/mr6_02.md
+++ b/2024/MediaRepresentationVI/mr6_02.md
@@ -34,8 +34,8 @@
     - [3. 検索結果からうまく次なる検索ワードを拾えてる？](#3-検索結果からうまく次なる検索ワードを拾えてる)
     - [4. 次の方法試したことありますか？](#4-次の方法試したことありますか)
     - [この文章プログラミング以外でも当てはまるかと](#この文章プログラミング以外でも当てはまるかと)
+  - [おまけ](#おまけ)
   - [まとめ](#まとめ)
-  - [追記](#追記)
   - [小レポート](#小レポート)
 
 ---
@@ -58,7 +58,7 @@ IT業界に内定決まった卒業生は
 
 で、
 
-> **高級コース**で**一分間平均、5.6以上**を取れるように入社までにトレーニングしてきてください。
+> **高級コース**で**一秒間平均、5.6以上**を取れるように入社までにトレーニングしてきてください。
 
 との案内があったようです。
 
@@ -66,7 +66,7 @@ IT業界に内定決まった卒業生は
 
 というわけで、みなさん試してみましょう。
 
-ちなみに、ちょこっとやった感じで、自分6.0です。e-typingだと、250-300に相当するんじゃないか...
+ちなみに、ちょこっとやった感じで、自分6.1です。e-typingだと、250-300に相当するんじゃないか...
 
 ### タイピング遅い人
 両手にタオルをかけて、キーボードを完全に見れない状態にして、位置を体に覚え込ませましょう。
@@ -188,7 +188,7 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 また、Rustと呼ばれる実行速度の速い言語で開発された[Zed](https://github.com/zed-industries/zed),[**Lapce**](https://lapce.dev/){:target="_blank"}, がVSC一強の中で注目されています。
 
-AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.cursor.com/)だったり、VSCに[Aider](https://marketplace.visualstudio.com/items?itemName=MattFlower.aider)も一部注目されていますが、確定事項ではありません。
+AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.cursor.com/)だったり、VSCに[Aider](https://marketplace.visualstudio.com/items?itemName=MattFlower.aider)などを追加しての利用も一部注目されていますが、まだ流動的かな、と思っています。
 
 - [参考：VSCode + Aider + Supermaven : STOP PAYING for CURSOR with this 100% FREE & Opensource Alternative](https://www.youtube.com/watch?v=XkDSQq0fwfU)
 
@@ -289,7 +289,7 @@ HTML,CSSを入力するの、コード補完があっても大変ではなかっ
 
 ### 4. 次の方法試したことありますか？
 1. 検索用語に「とは」を付加
-2. 検索語句を””で囲む(全文一致)
+2. 検索語句を””で囲む(全文一致 ex. 最も高い建物)
 3. サイト内検索(site:google.co.jp keyword)
 
 ### この文章プログラミング以外でも当てはまるかと
@@ -319,7 +319,7 @@ HTML,CSSを入力するの、コード補完があっても大変ではなかっ
 
 
 
-https://kisopro.net/blog/programming/google-it/
+- [プログラマーに必要な検索力とは？ググる検索テクニック「11選」](https://kisopro.net/blog/programming/google-it/)
 
 
 AIの時代になって、多少やり方は変わっていくかもしれませんが、基本的な検索力はあっていいと思います。
@@ -327,10 +327,20 @@ AIの時代になって、多少やり方は変わっていくかもしれませ
 ---
 ---
 ---
+
+## おまけ
+- [サルにもわかる正規表現](https://userweb.mnet.ne.jp/nakama/)
+- [Macでキーの連続入力の速さを設定する](https://support.apple.com/ja-jp/guide/mac-help/mchl0311bdb4/mac)
+
+
+
+---
+---
+---
 ## まとめ
 情報デザインにおいて、文字情報は非常に大きな意味を持っていて、それをなるべく簡単に操作できたり、検索できたりする能力がこれからまだまだ求められていきます。
 
-テキストエディタやショートカットを手名付けましょう。
+テキストエディタやショートカットを味方にしていきましょう。
 
 ---
 ---
@@ -359,10 +369,6 @@ Adobeはこれまでも多くの製品を買収してきました。
 ツールは常に進化を遂げており、ビジネスの事情によって、ツールをずっと使い続けられるかもわかりません。
 時代の流れを感じながら、つかやすいツールを使っていきましょう。
 -->
-
-## 追記
-- [サルにもわかる正規表現](https://userweb.mnet.ne.jp/nakama/)
-- [Macでキーの連続入力の速さを設定する](https://support.apple.com/ja-jp/guide/mac-help/mchl0311bdb4/mac)
 
 ## 小レポート
 - [寿司打](https://sushida.net/){:target="_blank"}
