--- a/2024/InformationDesignAppliedII/tex/CanvasFirstStep.tex
+++ b/2024/InformationDesignAppliedII/tex/CanvasFirstStep.tex
@@ -109,7 +109,7 @@ O：大文字のオー
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -156,7 +156,7 @@ O：大文字のオー
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -214,7 +214,7 @@ Math.floor()は小数点以下切り捨て
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -277,7 +277,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -343,7 +343,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -411,7 +411,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -483,7 +483,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -558,7 +558,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -641,7 +641,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -730,7 +730,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -825,7 +825,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -919,7 +919,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1018,7 +1018,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1112,7 +1112,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1161,7 +1161,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1223,7 +1223,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1290,7 +1290,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1359,7 +1359,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1440,7 +1440,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1537,7 +1537,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1640,7 +1640,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1746,7 +1746,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1855,7 +1855,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -1966,7 +1966,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -2079,7 +2079,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -2195,7 +2195,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
@@ -2363,7 +2363,7 @@ getRandomAlphaは0-1の乱数で透明度だね。
 <html>
 	<head>
 		<title>Canvas Test</title>
-		<script type="text/javascript">
+		<script>
 			//canvasの中身を指し示すもの
 			let ctx;
 			//canvasのwidth 幅
