--- a/2024/MediaRepresentationVI/mr6_05.md
+++ b/2024/MediaRepresentationVI/mr6_05.md
@@ -8,6 +8,7 @@
 
 - [メディア表現 VI 5. モダンExcel](#メディア表現-vi-5-モダンexcel)
   - [今日利用するデータ](#今日利用するデータ)
+  - [Excel 初級・中級・上級の目安](#excel-初級中級上級の目安)
   - [モダンExcel?](#モダンexcel)
   - [Excel等の現状](#excel等の現状)
     - [Officeのバージョンについて](#officeのバージョンについて)
@@ -25,6 +26,7 @@
   - [コンピュータ演習のおさらい・モダンExcelに入る前に知っておいてほしいこと](#コンピュータ演習のおさらいモダンexcelに入る前に知っておいてほしいこと)
     - [計算式](#計算式)
     - [絶対参照](#絶対参照)
+    - [VLOOKUPやってみよう](#vlookupやってみよう)
   - [Excelの便利な機能(コンピュータ演習範囲外)](#excelの便利な機能コンピュータ演習範囲外)
     - [ピボットテーブル](#ピボットテーブル)
       - [単純集計の方法](#単純集計の方法)
@@ -32,8 +34,10 @@
     - [テーブル](#テーブル)
     - [スピル](#スピル)
   - [Excelを利用する上での考え方](#excelを利用する上での考え方)
+  - [おまけ](#おまけ)
+    - [Microsoft Teams](#microsoft-teams)
+    - [AIについて](#aiについて)
   - [提出について](#提出について)
-  - [授業後追記](#授業後追記)
 
 ---
 
@@ -43,7 +47,18 @@
 ---
 ## 今日利用するデータ
 ダウンロードして解凍してください。
+- [test2020.xlsx.zip](./file/test2020.xlsx.zip)
 - [mr6_05.xlsx.zip](mr6_05.xlsx.zip)
+
+---
+## Excel 初級・中級・上級の目安
+「Excel使えます」というにはどの程度できればいいのでしょうか？
+1年生の時に学んだ内容だと自信を持ってExcel使えます、とはなりません。
+
+- [事務職でExcelはどこまでできればOK？初級・中級・上級をレベル別に解説](https://job-cube.com/blog/topics/8180/)
+
+中級の内容ができれば、わりと胸を張って「Excel使えます」ということができます。事務職狙いの人は、学んでおいた方が良いでしょう。
+
 
 ---
 ## モダンExcel?
@@ -161,6 +176,19 @@ Web上で利用できる、Word, Excel, PowerPointなどです。
 - オートフィル機能を計算式に対して使うときに、移動して欲しくないセルを「$A$1」の様に記述することです。
 - WinではF4、MacではCommand+Tでしたね。fnキーを押しながらF4でも利用できます。
 - ショートカットを押すごとに「絶対参照→複合参照（行）→複合参照（列）→相対参照」と変わっていきます。
+
+### VLOOKUPやってみよう
+クラスによって、教わった人とそうでない人いると思うのですが[test2020.xlsx](file/test2020.xlsx.zip)を開いて
+> 商品一覧表のデータからVLOOKUPを使ってドリンク名を計算式で入力してみよう。
+
+ヒント
+- =VLOOKUP(検索値,範囲,列番号) とのヒントがある
+- 検索値はコード
+- 範囲は商品一覧表
+- 列番号は左から2番目
+
+なお、VLOOKUPの新しいバージョンXLOOKUPが利用できるようになっています。
+- [XLOOKUP関数の使い方、具体例と実践方法](https://products.sint.co.jp/topsic/blog/excel-xlookup)
 
 ---
 ---
@@ -325,12 +353,21 @@ Excel2021, Microsoft365から利用できる機能です。
 
 今日わかったように、新しいことを使えるようになると、作業自体は楽になっていきます。
 
+## おまけ
+### Microsoft Teams
+Microsoft Teams Classicを利用している人いますか？
+これは廃止となるので、新しいTeamsをインストールするようにしましょう。
 
+- [従来の Teams クライアントの提供の終了](https://learn.microsoft.com/ja-jp/microsoftteams/teams-classic-client-end-of-availability)
 
+### AIについて
+- ChatGPT for Excelというアドインを導入すると無料でAI機能を追加できるのですが、OpenAIのAPIキーを入力する必要があります。(無料枠あるけど、結局どっかから有料)
+- Copilot Pro(有料)を導入することで、AI機能を利用することができるようになります。
+
+VBAなどはAIに作成を手伝ってもらった方が早く組めるかもしれません。
+
+---
 ## 提出について
-今日は作業したExcelのファイル名を学籍番号に変えて、それで提出としましょう。
+今日は作業したExcel(mr6_05.xlsx)のファイル名を学籍番号に変えて、それをmanaba提出としましょう。
 
 
-## 授業後追記
-- Teamsが「Microsoft Teams Classic」になっていたので、その辺りについて説明
-- Microsoft Copilotについての[ビデオ](https://www.youtube.com/watch?v=68uJlTn08uM)をシェア
