--- a/2024/InformationDesignII/id_09.md
+++ b/2024/InformationDesignII/id_09.md
@@ -12,6 +12,12 @@
 
 ---
 
+前回、4,5章予定でしたが、4章終了までとしました。
+今回5章から入っていきます。
+
+スクリーンキャスト...作るはず
+
+
 ## スライド
 
 [スライド資料](./id_09slide.pdf){:target="_blank"}
