--- a/2024/MediaRepresentationVI/mr6_09.md
+++ b/2024/MediaRepresentationVI/mr6_09.md
@@ -48,14 +48,15 @@ Googleの様々なツールを試してみました。
 ---
 ## Notion
 ### Notionとは？
-Notionは、世界中で2000万人以上、数十万のチームが利用するコラボレーションソフトウェア。
+[Notion](https://www.notion.com/ja){:target="_blank"}は、世界中で2000万人以上、数十万のチームが利用するコラボレーションソフトウェア。
 2022/11/10に日本語版が[正式リリース](https://internet.watch.impress.co.jp/docs/news/1454803.html){:target="_blank"}。
 
 まずは[紹介動画](https://www.notion.so/ja-jp/help/start-here){:target="_blank"}を見てみましょう。
 
 デスクトップアプリも、スマホ用のアプリもあるので便利です。
-
 なお、このサービスも日々アップデートされています。
+
+[NotionAI](https://www.notion.com/ja/product/ai){:target="_blank"}もサービスが始まっています。無料トライアルがあるのですが、基本有料サービスのため今回は割愛します。
 
 ### ログイン
 [https://www.notion.so/ja-jp/product](https://www.notion.so/ja-jp/product)
@@ -164,7 +165,11 @@ Notionでは複製やカスタマイズ用に50以上のテンプレートを用
 
 [テンプレートギャラリー](https://www.notion.so/ja-jp/templates){:target="_blank"}にもあります。
 
+<!--
 **学生・教育者関係**の**大学**を複製して、少し触ってみましょう。
+-->
+
+**見つける**の右の**学校**をクリックして、少しスクロールして**大学**を選んで、**追加**にて大学をプライベートに複製しましょう。少し触って便利さをわかってくれればと思います。
 
 #### ワークスペース
 ページを複数保持できるのがワークスペースという考え方です。
@@ -182,7 +187,7 @@ Shareから
 ---
 ---
 ### 就活ノートを作ってみよう
-オフィシャルのテンプレートに「就活ノート」がありますが、これを参考に一から作ってみましょう。
+オフィシャルのテンプレートに「就活の情報管理用テンプレート」がありますが、これを参考に一から作ってみましょう。
 
 こういうデータベース系のものって、データも少し入力しないとあまり意味がないので、枠組みと同時に仮データも入力していきます。
 
@@ -218,7 +223,7 @@ Shareから
 - Tableをリンク集
 としましょう。
 
-データとして,「マイナビ2024」https://job.mynavi.jp/2024/
+データとして,「マイナビ2026」https://job.mynavi.jp/2026/
 を入力しておきましょう。
 
 左上のTableを右クリックでRename,リンク集としておきましょう。
