--- a/2024/InformationDesignII/id_10.md
+++ b/2024/InformationDesignII/id_10.md
@@ -12,6 +12,7 @@
   - [デザイン](#デザイン)
   - [資料](#資料)
   - [やってみたファイル](#やってみたファイル)
+  - [Sammyゼミ履修希望の人へ](#sammyゼミ履修希望の人へ)
 
 ---
 
@@ -30,3 +31,6 @@
 
 ## やってみたファイル
 - [Large Desktop](./id_10_root/large-desktop.html)
+
+## Sammyゼミ履修希望の人へ
+- [Sammyゼミ履修希望の2年生へ](https://sammyppr.github.io/Seminar_Sammy/ForSophomore/2025ForSophomore.html)
