--- a/Seminar_Sammy/2024.md
+++ b/Seminar_Sammy/2024.md
@@ -30,8 +30,8 @@
 
 最終的にスライドにてこれらを簡潔にまとめて、「私はこれに取り組みました」と言えるところを目指していきましょう。
 
-## 予定
-TODO： 予定fix待ち
+## ゼミの発表について
+- [別ページへ](./presentation/index.md)
 
 ## Topic
 - VFX・3DCG・MotionGraphics
