--- a/2024/MediaRepresentationVI/mr6_14.md
+++ b/2024/MediaRepresentationVI/mr6_14.md
@@ -16,6 +16,7 @@
   - [カオスマップ](#カオスマップ)
   - [Xでの評判](#xでの評判)
   - [Felo](#felo)
+  - [Genspark](#genspark)
   - [AnyChat](#anychat)
   - [Gamma](#gamma)
   - [プロンプトジェネレータ](#プロンプトジェネレータ)
@@ -133,6 +134,12 @@ Googleは
 - スライド作成(検索後、右上のボタンから)
 
 を行なってみましょう。
+
+## Genspark
+リサーチに強いとされるGensparkですが、ファクトチェックというユニークな機能がついています。
+
+- [Genspark](https://www.genspark.ai/)
+
 
 ## AnyChat
 複数モデルを切り替えながらつかえるAnyChatも気になっています。
