--- a/2025/MediaCultureTheoryV/mct5_02.md
+++ b/2025/MediaCultureTheoryV/mct5_02.md
@@ -1,4 +1,4 @@
-# メディア文化論V 1.オリエンテーション <!-- omit in toc -->
+# メディア文化論V 2.紙<!-- omit in toc -->
 
 [メディア文化論V TOP に戻る](./index.md)
 
@@ -11,5 +11,5 @@
 
 ## スライド
 
-[スライド資料](./mct5_01slide.pdf){:target="_blank"}
+[スライド資料](./mct5_02slide.pdf){:target="_blank"}
 
