--- a/2025/MediaRepresentationV/mr5_01.md
+++ b/2025/MediaRepresentationV/mr5_01.md
@@ -11,7 +11,6 @@
   - [シラバス紹介](#シラバス紹介)
     - [授業のねらい及び到達目標](#授業のねらい及び到達目標)
     - [授業の形式・計画](#授業の形式計画)
-    - [2024特記事項](#2024特記事項)
   - [利用するアプリについて](#利用するアプリについて)
     - [Blender について](#blender-について)
     - [Blender Overview](#blender-overview)
@@ -23,6 +22,7 @@
     - [いろんなリンク](#いろんなリンク)
   - [Blender インストール](#blender-インストール)
     - [LTS 使う人(バグなどの時用)](#lts-使う人バグなどの時用)
+    - [上級者向け(2025追記)](#上級者向け2025追記)
   - [起動しよう](#起動しよう)
   - [言語設定について(個人的には英語推奨)](#言語設定について個人的には英語推奨)
   - [画面を有効に使おう](#画面を有効に使おう)
@@ -66,9 +66,6 @@
 14. コンポジット・動画編集
 15. モーショントラッキング
 
-### 2024特記事項
-- 水曜2,金曜2に開講してるよ
-- 内容は同じ。取りやすい方でとってね。
 ---
 
 ## 利用するアプリについて
@@ -78,10 +75,10 @@
 - 最近すごく勢いがあるアプリ。自分は 2021 年度に触り始めたばかり
 - 2.8(2019)あたりから使いやすいインターフェイスになった
 - 異なるバージョンを使っているチュートリアルだと、同じ操作ができなかったりするので注意(2.8 以降推奨)
-- 最新版を使うとバグもあるので、LTS(3.3,3.6) も必要に応じて使っていこう
+- 最新版を使うとバグもあるので、LTS(3.6,4.2) も必要に応じて使っていこう
 - マウス・テンキーがあったほうが良いという意見もあるけど、なくてもいける
-- 1年で、2.93から3.5までバージョンアップしてできることが増えてる。その後の1年で4.02へ
-- 2024/3には4.1リリース
+- 1年で、2.93から3.5までバージョンアップしてできることが増えてる。その後の1年で4.02へ。その後4.3.2へ。
+- 2024/3には4.4リリース
 
 ### Blender Overview
 
@@ -91,7 +88,7 @@
 
 - アプリは道具でしかないので、何を使っても良い
 - 特に 3D では用途に応じていろいろなアプリがあるため、便利に使いわければ良い
-- Blender はずっと無料、Maya は学生の間だけ無料だが、その後は年間数十万かかる
+- Blender はずっと無料。Maya は学生の間だけ無料だが、その後は年間数十万かかる
 - プロは Maya と言われていたが、最近ではゲーム業界・アニメ業界にて Blender も使われ始めている
 - 参考 [『シン・エヴァ』で 3DCG を手がけたプロジェクトスタジオ Q、Blender の魅力を語る](https://news.mynavi.jp/article/20210804-1927380/){:target="_blank"}
 - 参考 [エヴァ制作のカラーが Blender への移行を進める理由とは？](https://cgtracking.net/cg-news/khara-blender/){:target="_blank"}
@@ -115,7 +112,7 @@
 
 - 好きになろう(楽しもう)。モチベが大事。とにかく触ろう。
 - 多くのことができるので、興味があるところから重点的に取り組もう。(授業だから順番にやるけど)
-- Twitter で「Blender」「#blender初心者」でぐぐると、初心者たくさんいて刺激になるよ(たまに、3Dやった人が"blenderは初心者"の人もいるけど)
+- Twitter で「Blender」「[#blender初心者](https://x.com/search?q=%23blender%E5%88%9D%E5%BF%83%E8%80%85&src=typed_query)」でぐぐると、初心者たくさんいて刺激になるよ(たまに、すでに3Dやってる人が"blenderは初心者"の人もいるけど)
 - まずはチュートリアル見ながらすげー！と思おう。
 - なるべく 15 分くらいのチュートリアルやってみよう。(長いとめげる)
 - みないでできるようになってみよう。
@@ -124,10 +121,10 @@
 - ある程度わかったところで体系的に何ができるか学ぼう。
 
 ## 3DCGにハマった人
-- トップからArchive - Contents 2023に昨年度の資料置いてあります。ほぼ同じでいくので、どんどん進んでください。
+- 先に2024年度をベース資料すべて公開します。ハマった人はどんどん先に進んでOKです。
 - 授業で教えられることはとっかかりだけ。どんどん自分で挑戦して成長していこう
 - 就活で利用したい人は、ポートフォリオで必須となるので作品をどんどん作っていこう
-- やってみたいBlender本あったら買います。言ってください。
+- やってみたいBlender本あったら買います。言ってください。(結構買ってあります)
 
 ### いろんなリンク
 
@@ -142,21 +139,27 @@
 1. [Blender 公式サイト](https://www.blender.org/){:target="_blank"}
 2. 「Download」をクリック
 3. Intel なら intel, M1 なら AppleSilicon, Win なら Installer。自動でレコメンドされる。
-4. 「Download Blender 4.1」をクリック
+4. 「Download Blender 4.4」をクリック
 5. ディスクイメージを開けて、Blender をアプリケーションフォルダにコピー(Winは普通にインストール)
 
 [![](https://img.youtube.com/vi/bLQEbp7DbgM/0.jpg)](https://www.youtube.com/watch?v=bLQEbp7DbgM){:target="_blank"}
 
 ### LTS 使う人(バグなどの時用)
-早速Mac(intel)で、後で使うcube-diolamaを利用しようとしたら、バグって利用できませんでした。そんな時はLTS(Long Term Support)バージョンを利用しましょう。新機能は追加されていないけれども、安定して利用できるバージョンで、現在は3.3LTS,3.6LTSがあります。M1では普通に動きました。
+早速Mac(intel)で、後で使うcube-diolamaを利用しようとしたら、バグって利用できませんでした。そんな時はLTS(Long Term Support)バージョンを利用しましょう。新機能は追加されていないけれども、安定して利用できるバージョンで、現在は3.6LTS,4.2LTSがあります。M1では普通に動きました。
 
 - [Download の Long-term-support](https://www.blender.org/download/lts/){:target="_blank"}からダウンロードできる
-- アプリケーションフォルダに「Blender3.3LTS」とかフォルダ作成し、その中に入れることで、複数のバージョンを使うことが可能。
+- アプリケーションフォルダに「Blender4.2LTS」とかフォルダ作成し、その中に入れることで、複数のバージョンを使うことが可能。
 - Command+スペースで Blender を検索した時に、フォルダ名が出るので、どっちをつかっているかわかるよ
 - Win の人は[BlenderHub](https://3dnchu.com/archives/blenderhub-1-1-0/){:target="_blank"}を導入しよう。(必要に応じて)
 
 ![複数バージョンの入れ方](../../2022/MediaRepresentationV/img/mr5-01-01.png)
 ![アプリのバージョンの選び方](../../2022/MediaRepresentationV/img/mr5-01-02.png)
+
+### 上級者向け(2025追記)
+複数バージョンを管理するMac(AppleSillicon)用のアプリ
+- [Blender Launcher V2](https://github.com/Victor-IX/Blender-Launcher-V2){:target="_blank"}
+
+が出ました。ヘビーユーザにはお勧めです。MacでもBlenderを複数起動することもできるようになります。
 
 ---
 
@@ -188,8 +191,10 @@
 ## 画面を有効に使おう
 
 - iMac では Blender, Web ページを両方おくことができるが、ノートパソコンなら、三本指でスワイプして 2 画面をうまく使いこなそう。
-- [EasyRes](https://apps.apple.com/jp/app/easyres/id688211836?mt=12){:target="_blank"}を使うと、Mac の標準設定より解像度をさらに広げることができる。文字は小さくなるけど便利。(自分は 2048\*1280)
-- macOS 13.3 Venturaにアップデートした場合には、EasyResがいらなくて、システム環境設定から同様に設定することができる。[macOS 13.3 Venturaでは新しいシステム設定アプリで隠されていたディスプレイの解像度リストを表示させるオプションが追加。](https://applech2.com/archives/20230407-macos-133-ventura-back-show-resolutions-as-list.html){:target="_blank"}
+
+- ディスプレイの解像度をあげると、文字は小さくなるけど作業領域が増えるので、人によってはお勧め。
+
+- [macOS 13.3 Venturaでは新しいシステム設定アプリで隠されていたディスプレイの解像度リストを表示させるオプションが追加。](https://applech2.com/archives/20230407-macos-133-ventura-back-show-resolutions-as-list.html){:target="_blank"}
 
 [![](https://img.youtube.com/vi/x9oyb64Snpk/0.jpg)](https://www.youtube.com/watch?v=x9oyb64Snpk){:target="_blank"}
 
@@ -216,8 +221,6 @@
 ---
 
 ## 物をおいてみよう
-4.0でうまくいかない人は、3.6LTSをダウンロードしてみよう
-
 - 3.0 から追加されたアセットブラウザのデモが公開されている。
 - [Blender 公式サイト](https://www.blender.org/){:target="_blank"}
 - Download - Demo Files - Cube Diolama
