--- a/2025/SoundDesign/sd_01.md
+++ b/2025/SoundDesign/sd_01.md
@@ -4,8 +4,8 @@
 
 ---
 
-1. [スライド](#スライド)
-2. [インストールしておくアプリケーション](#インストールしておくアプリケーション)
+- [スライド](#スライド)
+- [インストールしておくアプリケーション](#インストールしておくアプリケーション)
 
 ---
 
@@ -21,4 +21,4 @@
 - Adobe Premiere
 - Adobe AfterEffects
 - [Soundly](https://getsoundly.com/){:target="_blank"}
-- [Studio One Prime](https://www.mi7.co.jp/products/presonus/studioone/prime/){:target="_blank"}
+<!-- - [Studio One Prime](https://www.mi7.co.jp/products/presonus/studioone/prime/){:target="_blank"}-->
