2025 mr5 till08 update

--- a/2025/MediaRepresentationV/mr5_01.md
+++ b/2025/MediaRepresentationV/mr5_01.md
@@ -145,7 +145,7 @@
 [![](https://img.youtube.com/vi/bLQEbp7DbgM/0.jpg)](https://www.youtube.com/watch?v=bLQEbp7DbgM){:target="_blank"}
 
 ### LTS 使う人(バグなどの時用)
-早速Mac(intel)で、後で使うcube-diolamaを利用しようとしたら、バグって利用できませんでした。そんな時はLTS(Long Term Support)バージョンを利用しましょう。新機能は追加されていないけれども、安定して利用できるバージョンで、現在は3.6LTS,4.2LTSがあります。M1では普通に動きました。
+Mac(intel)で、後で使うcube-diolamaを利用しようとしたら、バグって利用できませんでした。そんな時はLTS(Long Term Support)バージョンを利用しましょう。新機能は追加されていないけれども、安定して利用できるバージョンで、現在は3.6LTS,4.2LTSがあります。M1では普通に動きました。
 
 - [Download の Long-term-support](https://www.blender.org/download/lts/){:target="_blank"}からダウンロードできる
 - アプリケーションフォルダに「Blender4.2LTS」とかフォルダ作成し、その中に入れることで、複数のバージョンを使うことが可能。
@@ -235,9 +235,9 @@
 
 #### トラックパッド
 
-- 視点回転はPreference-Input-Emulate 3Button Mouseにチェックを入れて Option+クリック or 2本指
+-  視点回転は2本指 or Preference-Input-Emulate 3Button Mouseにチェックを入れて Option+クリック
 - 視点平行移動は Shift+2 本指
-- 拡大縮小は Ctrl ＋ 2 本指 or ピンチイン・ピンチアウト
+- 拡大縮小はピンチイン・ピンチアウト or  Ctrl ＋ 2 本指
 - 上手くいかない人は、システム環境設定のトラックパッドを確認
 
 [![](https://img.youtube.com/vi/l0kEjQBoSw4/0.jpg)](https://www.youtube.com/watch?v=l0kEjQBoSw4){:target="_blank"}
