--- a/2025/MediaRepresentationV/mr5_02.md
+++ b/2025/MediaRepresentationV/mr5_02.md
@@ -25,6 +25,7 @@
     - [たくさん積もう](#たくさん積もう)
     - [スザンヌの用意](#スザンヌの用意)
     - [スザンヌ光らせてみよう](#スザンヌ光らせてみよう)
+      - [(注意！)4.2以降Bloomがない！](#注意42以降bloomがない)
     - [ライティング](#ライティング)
     - [カメラの位置を設定](#カメラの位置を設定)
     - [書き出し](#書き出し)
@@ -115,6 +116,7 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 
 [![Blender チートシート](https://2.bp.blogspot.com/-EpIVpOGFHYI/XuGTbz7skEI/AAAAAAAACdA/7zx2iybU85AqJfUROEHu1NACRXI5aeCUgCLcBGAsYHQ/s1600/20200611.jpg)](http://rt3dcg.blogspot.com/2019/02/blender280-cheatsheet.html){:target="_blank"}
 
+- [Blender4.1 basic keyboard and mouse shortcuts](https://surf-visualization.github.io/blender-course/references/cheat-sheet-4.1.pdf)
 <!-- MOVIE TODO mr5_02_02Operation.mp4-->
 
 ---
@@ -185,6 +187,10 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 - スザンヌ選んだ状態で、マテリアルプロパティでNew
 - Emissionで適当な色を選んで、EmissionStrengthで100
 - レンダープロパティでBloomにチェック
+
+#### (注意！)4.2以降Bloomがない！
+できる人は、以下の「ブルーム」の項を見てみよう
+- [【Blender】v.4.2で無くなったレンダープロパティ項目の代替機能は、何？](https://note.com/info_/n/na01c2e84de2f){:target="_blank"}
 
 ### ライティング
 - ViewportShadingでRenderPreviewモードに
