--- a/2025/MediaRepresentationV/mr5_03.md
+++ b/2025/MediaRepresentationV/mr5_03.md
@@ -290,7 +290,7 @@
 ### 便利な Add ons
 
 - [LoopTools](https://www.youtube.com/watch?v=LQjfJ3aUDYI){:target="\_blank"f}
-
+- [Poly Haven Asset Browser for Blender](https://polyhaven.com/plugins/blender)
 ---
 
 ---
