--- a/2025/MediaRepresentationV/mr5_04.md
+++ b/2025/MediaRepresentationV/mr5_04.md
@@ -30,7 +30,7 @@
 
 ## モディファイアとは？
 - ポリゴンに手を加えずに、形状等に変化を非破壊的に与えるもの
-- 非破壊的なので、有効にしなければ元に戻るよ
+- 非破壊的なので、無効にすれば元に戻るよ
 - Modify/Generate/Deform/Physicsのカテゴリに分かれているよ
 - 今日はGenerate/Physicsを中心にみていこう
 - Location,Rotation,Scaleが1ではない状態のものは、うまくかからないことがあるので、Ctrl-Aで適応させると思い通りにいくよ
