--- a/2025/SoundDesign/sd_01.md
+++ b/2025/SoundDesign/sd_01.md
@@ -19,6 +19,7 @@
 
 - Adobe Audition
 - Adobe Premiere
-- Adobe AfterEffects
 - [Soundly](https://getsoundly.com/){:target="_blank"}
 <!-- - [Studio One Prime](https://www.mi7.co.jp/products/presonus/studioone/prime/){:target="_blank"}-->
+
+3年生以上でAdobeのライセンスがない人は授業後、言いにきてください。
