--- a/2025/AnalogueDesignI/ad1_01.md
+++ b/2025/AnalogueDesignI/ad1_01.md
@@ -13,7 +13,7 @@
 
 ## スライド
 
-[スライド資料](./mct5_01slide.pdf){:target="_blank"}
+[スライド資料](./ad1_01slide.pdf){:target="_blank"}
 
 ## Teams チームコード
 **0f0z80a**
