--- a/2025/MediaRepresentationV/mr5_02.md
+++ b/2025/MediaRepresentationV/mr5_02.md
@@ -114,10 +114,15 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 - 全部覚えなきゃいけないの？と考えると大変
 - 何回も触っていくと自然に覚えていくので、「これは使った」と印つけていくとよいかも
 
-[![Blender チートシート](https://2.bp.blogspot.com/-EpIVpOGFHYI/XuGTbz7skEI/AAAAAAAACdA/7zx2iybU85AqJfUROEHu1NACRXI5aeCUgCLcBGAsYHQ/s1600/20200611.jpg)](http://rt3dcg.blogspot.com/2019/02/blender280-cheatsheet.html){:target="_blank"}
+[![Blender チートシート](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhfYgRW9DJj7CMSCq9OeLeKVThASFE6IZc70AbOd0mVKVLU_oomPsnJqi3Jc0r8xdzi6pQ-0QOjoT4OxQi1ILDCcHsZywYzX4_eaATUWdpFStSEyEE3QsATZ_GzKpONrTmVDSFPYcmVJy33m9wBTiP80kVxMlb6eeeJNyWk3jRc0g-ug0BexJsuGisK6Q/s1280-e365-rw/20220707ind.jpg)](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhfYgRW9DJj7CMSCq9OeLeKVThASFE6IZc70AbOd0mVKVLU_oomPsnJqi3Jc0r8xdzi6pQ-0QOjoT4OxQi1ILDCcHsZywYzX4_eaATUWdpFStSEyEE3QsATZ_GzKpONrTmVDSFPYcmVJy33m9wBTiP80kVxMlb6eeeJNyWk3jRc0g-ug0BexJsuGisK6Q/s1280-e365-rw/20220707ind.jpg){:target="_blank"}
 
+
+<!--
 - [Blender4.1 basic keyboard and mouse shortcuts](https://surf-visualization.github.io/blender-course/references/cheat-sheet-4.1.pdf)
-<!-- MOVIE TODO mr5_02_02Operation.mp4-->
+- -->
+- [Blenderショートカットキーまとめ【最新保存版】3.6](https://saru-blender.com/shortcut)
+- [Blender 4.2.3 チートシート 学習メモ](https://g37.jp/2024/11/blender-4-2-3/)
+
 
 ---
 ---
