--- a/2025/MediaRepresentationV/mr5_02.md
+++ b/2025/MediaRepresentationV/mr5_02.md
@@ -176,7 +176,7 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 ### スザンヌの用意
 ここからは意味が分からなくていいからやってみよう
 - Shift+AでMesh-Monkey
-- Y方向に10m、Z方向に100m移動しよう
+- Y方向に10m、Z方向に100m移動しよう(間違い！Zに10 Yに100だね...3年くらいやって初めて指摘された...)
 - 大きさを4倍にしよう
 - Nでサイドバーを表示
 - Transform-LocationでYをクリックしてリターンしてiを押す。
