--- a/2025/MediaRepresentationIII/mr3_03.md
+++ b/2025/MediaRepresentationIII/mr3_03.md
@@ -19,9 +19,9 @@
 [スライド資料](./mr3_03slide.pdf){:target="_blank"}
 
 ## 2022.10 トラックマットのUIインターフェイスに変更あり
-https://cginterest.com/2022/10/19/after-effects-23-0-%E3%81%8C%E3%83%AA%E3%83%AA%E3%83%BC%E3%82%B9%E3%80%81%E9%81%B8%E6%8A%9E%E5%8F%AF%E8%83%BD%E3%81%AA%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9E%E3%83%83%E3%83%88%E3%83%AC%E3%82%A4/#toc2
+- [選択可能なトラックマットレイヤー](https://cginterest.com/2022/10/19/after-effects-23-0-%E3%81%8C%E3%83%AA%E3%83%AA%E3%83%BC%E3%82%B9%E3%80%81%E9%81%B8%E6%8A%9E%E5%8F%AF%E8%83%BD%E3%81%AA%E3%83%88%E3%83%A9%E3%83%83%E3%82%AF%E3%83%9E%E3%83%83%E3%83%88%E3%83%AC%E3%82%A4/#toc2)
 
-https://www.dsp.co.jp/tocreator/all/tips-all/itohsensei-aftereffects-trackmatte/
+- [トラックマットレイヤーの選択](https://www.dsp.co.jp/tocreator/all/tips-all/itohsensei-aftereffects-trackmatte/)
 
 
 ## 動画
